k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ad46eda57568444aaa3e074c92066de5-272672588.us-east-1.elb.amazonaws.com  # Replace with your actual domain or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 3000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
